# fft

./: .env.ci  .env.example  .gitignore  .pii-secret-exclude  .pre-commit-config.yaml  .tool-versions  Procfile  README.md  circleci.env  conftest.py  docker-compose.yml  local.env.example  locustfile.py  makefile  manage.py  manifest.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  requirements.txt  runtime.txt  setup.cfg  user-post.sh  vite.config.js
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.github/: CODEOWNERS
.github/workflows/: bdd.yml  ci.yml  pytest.yml
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
app_layer/: apps.py  exception.py  log.py  serializers.py  urls.py  views.py
app_layer/adapters/: csv_file_processor.py  excel_file_processor.py  s3_output_bucket.py
app_layer/layer/: service.py
app_layer/ports/: file_processor.py  output_service.py
chartofaccountDIT/: apps.py  archive.py  exportcsv.py  filters.py  forms.py  import_archived_from_csv.py  import_csv.py  models.py  tables.py  urls.py  views.py
chartofaccountDIT/admin/: __init__.py  archived_admin.py  current_admin.py
chartofaccountDIT/migrations/: 0001_initial.py  0002_data_20200522.py  0003_auto_20200818_1511.py  0004_auto_20200820_0751.py  0005_auto_20200828_1209.py  0006_auto_20200916_1117.py  0007_auto_20200924_0931.py  0008_auto_20200925_1502.py  0009_auto_20201123_0902.py  0010_auto_20210104_1521.py  0011_auto_20210430_0925.py  0012_alter_fcomapping_account_l6_code_fk.py  0012_auto_20230403_1035.py  0012_auto_20230406_0735.py  0013_auto_20230428_1106.py  0014_alter_archivedanalysis1_financial_year_and_more.py  0015_alter_simplehistoryanalysis1_options_and_more.py
chartofaccountDIT/templatetags/: chart_of_account.py
chartofaccountDIT/test/: factories.py  test_archive.py  test_upload_archived_chart_of_account.py  test_view_archived_expenditure.py  test_view_archived_programme.py
codebuild/web/: buildspec.yml
config/: api.py  celery.py  flags.py  perms.py  urls.py  wsgi.py
config/settings/: base.py  bdd.py  build.py  ci.py  dev.py  local.py  paas.py  prod.py
copilot/: process.yml
copilot/web/: buildspec.yml
core/: admin.py  constants.py  export_data.py  filters.py  forms.py  import_csv.py  metamodels.py  middleware.py  models.py  no_cache_middleware.py  remove_users.py  tables.py  types.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_data_20200522.py  0003_data_20200604.py  0004_data_20200608.py  0005_data_20200702.py  0006_data_20200810.py  0007_auto_20200826_0813.py  0007_data_20200901.py  0008_auto_20201130_1256.py  0009_historicaluser_sso_contact_email.py  0010_auto_20210316_1530.py  0011_alter_historicaluser_first_name.py  0012_auto_20220427_1046.py  0013_alter_historicalgroup_options_and_more.py  0014_payuplift.py  0015_attrition.py  0016_alter_attrition_options.py  0017_alter_attrition_cost_centre_and_more.py  0018_alter_attrition_cost_centre_and_more.py  0019_remove_attrition_unique_attrition_and_more.py  0020_alter_attrition_apr_alter_attrition_aug_and_more.py  0021_data_update_pay_modifiers_periods.py
core/templates/: 403.html  404.html  (+6 more)
costcentre/: admin.py  archive.py  export_user_cost_centre.py  exportcsv.py  filters.py  forms.py  import_archived_from_csv.py  import_csv.py  import_segment_data_to_archive.py  models.py  tables.py  urls.py  views.py
data_lake/: hawk.py  urls.py
docker/: Dockerfile.dev  Dockerfile.frontend
download_file/: apps.py  decorators.py  forms.py  models.py  urls.py
downloadsupport/: apps.py  forms.py
dw_simulation/: apps.py  models.py
end_of_month/: admin.py  end_of_month_actions.py  forms.py  models.py  monthly_outturn.py  restore_archive.py  upload_archived_month.py  urls.py  utils.py
features/: environment.py  show_hide_columns.feature
forecast/: admin.py  create_mi_report_source.py  create_oscar_report.py  forms.py  import_actuals.py  import_budget_or_forecast.py  import_budgets.py  import_budgets_or_forecast.py  import_csv.py  models.py  permission_shortcuts.py  serialisers.py  services.py  tables.py  tasks.py  urls.py
front_end/: package-lock.json  package.json
future_years/: apps.py  forms.py  urls.py  views.py
gifthospitality/: admin.py  export_csv.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
hr/: models.py
import_chart_of_account/: apps.py  import_nac_cash_income_fields.py  models.py
importdata/: admin.py  tasks.py
mi_report_data/: apps.py  models.py  tests.py  urls.py  utils.py  views.py
my_hr/: models.py
myhr/: apps.py  costcentre.py  directorate.py  group.py  models.py  serialisers.py  urls.py  views.py
oscar_return/: apps.py  create_oscar_report.py  models.py  urls.py  views.py
payroll/: PayrollLookup.csv  admin.py  api.py  constants.py  edit_payroll.py  edit_select_cost_centre.py  forms.py  models.py  serialisers.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
previous_years/: apps.py  archive_current_year_figure.py  import_actuals.py  import_previous_year.py  models.py  utils.py
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
scripts/: run-bdd-tests.sh  test-hawk-api.py
split_project/: admin.py  apps.py  downloads.py  import_project_percentage.py  models.py  split_figure.py  tests.py  urls.py  utils.py  views.py
staff/: admin.py  models.py  urls.py  views.py
transaction/: apps.py  models.py  serializers.py
transactions/: models.py
treasuryCOA/: admin.py  export_csv.py  import_csv.py  models.py
treasurySS/: admin.py  archive.py  export_csv.py  import_csv.py  import_segment_data_to_archive.py  models.py
upload_file/: admin.py  apps.py  decorators.py  models.py  urls.py  utils.py  views.py
upload_split_file/: admin.py  apps.py  downloads.py  forms.py  import_project_percentage.py  models.py  split_actuals.py  urls.py  views.py
user/: admin.py  backends.py  download_user_cost_centre.py  download_users.py  models.py
zero_transaction/: apps.py  models.py
(+605 files in other folders)
