[tool.poetry]
name = "fft"
version = "0.1.0"
description = ""
authors = ["Live Services <live.services@digital.trade.gov.uk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
dj-database-url = "^0.5.0"
django = "^4.2.11"
django-admin-list-filter-dropdown = "^1.0.3"
django-autocomplete-light = "^3.11.0"
django-axes = "^6.4.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-filter = "^24.1"
django-guardian = "^2.4.0"
django-import-export = "^3.3.07"
django-log-formatter-ecs = "^0.0.5"
django-pivot = "^1.10"
django-redis = "^5.4.0"
django-reversion = "^5.0.12"
django-settings-export = "^1.2.1"
django-simple-history = "^3.5.0"
django-staff-sso-client = "^4.2.2"
django-tables2 = "^2.7.0"
djangorestframework = "^3.15.1"
docutils = "^0.14"                           # TO RECHECK
elastic-apm = "^6.2.2"
future = "^1.0.0"
gunicorn = "^19.9.0"
psycopg2 = "^2.8.6"
raven = "^6.9.0"                             # TO RECHECK
django-chunk-upload-handlers = "^0.0.14"
sentry-sdk = "^1.25.1"
whitenoise = "^6.6.0"
mohawk = "^1.1.0"
boto3 = "^1.17.89"
botocore = "^1.20.89"
django-storages = "^1.14.2"
openpyxl = "^3.0.5"
requests = "^2.25.1"

# Locked versions (not direct dependencies)
redis = "3.5.3" # TO RECHECK
six = "1.15.0"  # TO RECHECK


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gevent = "^23.9.0"
psycogreen = "1.0.2"
django-audit-log-middleware = "0.0.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
selenium = "^4.18.1"
beautifulsoup4 = "^4.9.1"
soupsieve = "^1.9.6"
faker = "^4.1.1"
factory-boy = "^2.12.0"
black = "^22.3.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-django = "^4.8.0"
pytest-xdist = "^3.5.0"
behave-django = "^1.4.0"
pyperclip = "^1.8.0"
freezegun = "^1.0.0"
isort = "^5.10.1"
flake8 = "^3.8.4"
pytest-random-order = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true
line_length = 88
lines_after_imports = 2

[tool.black]
# Exclude files with # noqa directive for flake8. They have long lines,
# and black will move the flake8 directive to a new line, and flake8 will complain.
exclude = '''
(
    \.direnv
    | \.env
    | \.git
    | \.venv
    | venv
    | _build
    | build
    | dist
    | node_modules
    | chartofaccountDIT/filters.py
    | chartofaccountDIT/models.py
    | data_lake/views/fco_mapping.py
    | forecast/views/base.py
    | upload_split_file/downloads.py
)
'''
